--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "finnancial-summary",
+  "name": "financial-summary",
   "version": "0.5.0",
   "private": true,
   "scripts": {
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.0.4",
     "@headlessui/tailwindcss": "^0.2.1",
     "@hookform/resolvers": "^3.5.0",
+    "@internationalized/date": "^3.5.4",
     "@next/eslint-plugin-next": "^14.2.3",
     "@nextui-org/react": "^2.4.1",
     "@phosphor-icons/react": "^2.1.5",
