--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.1.0",
     "@remixicon/react": "^4.2.0",
-    "@tremor/react": "^3.17.2",
+    "@tremor/react": "^3.17.4",
     "@vercel/postgres": "^0.8.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
@@ -33,9 +34,11 @@
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "framer-motion": "^11.2.10",
+    "i": "^0.3.7",
     "jose": "^5.2.4",
     "next": "14.1.4",
     "next-themes": "^0.3.0",
+    "npm": "^10.8.1",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
