--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@next/eslint-plugin-next": "^14.2.3",
     "@nextui-org/react": "^2.4.1",
     "@phosphor-icons/react": "^2.1.5",
+    "@radix-ui/react-checkbox": "^1.1.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
@@ -25,6 +26,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.1.0",
     "@remixicon/react": "^4.2.0",
+    "@tanstack/react-table": "^8.17.3",
     "@tremor/react": "^3.17.4",
     "@vercel/postgres": "^0.8.0",
     "bcrypt": "^5.1.1",
