--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "framer-motion": "^11.2.10",
+    "geist": "^1.3.0",
     "i": "^0.3.7",
     "jose": "^5.2.4",
     "next": "14.1.4",
